tenant-b-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pvc
  namespace: tenant-b
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - name: tenant-data
          mountPath: /data
      resources:
        requests:
          cpu: 250m
          memory: 256Mi
        limits:
          cpu: 500m
          memory: 512Mi
  volumes:
    - name: tenant-data
      persistentVolumeClaim:
        claimName: tenant-b-data
